// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate Edge cases handles empty spec: empty-spec-output 1`] = `
"import { z } from "zod";

// Path Functions
export const paths = {
} as const;

// Header Schemas
export const headerSchemas = {
} as const;

// Header Functions
export const headers = {
} as const;

// Operation Types
// Operation Objects
// Operation Metadata
export const operationMetadata = {
} as const;
"
`;

exports[`generate Edge cases handles spec with no components: no-components-spec-output 1`] = `
"import { z } from "zod";
import type { OperationDefinition, OperationErrors } from "zenko";

// Path Functions
export const paths = {
  getTest: () => "/test",
} as const;

// Header Schemas
export const headerSchemas = {
  getTest: z.object({}),
} as const;

// Header Functions
export const headers = {
  getTest: () => headerSchemas.getTest.parse({}),
} as const;

// Operation Types
export type GetTestOperation = OperationDefinition<
  "get",
  typeof paths.getTest,
  undefined,
  undefined,
  undefined,
  OperationErrors,
  undefined
>;

// Operation Objects
export const getTest: GetTestOperation = {
  method: "get",
  path: paths.getTest,
} as const;

// Operation Metadata
export const operationMetadata = {
  getTest: {
    method: "get",
    path: "/test",
  },
} as const;
"
`;

exports[`generate Edge cases handles circular dependencies gracefully: circular-dependencies-output 1`] = `
"import { z } from "zod";

// Generated Zod Schemas

export const B = z.object({
  a: z.lazy((): z.ZodType => A).optional(),
});

export type B = z.infer<typeof B>;

export const A = z.object({
  b: z.lazy((): z.ZodType => B).optional(),
});

export type A = z.infer<typeof A>;

// Path Functions
export const paths = {
} as const;

// Header Schemas
export const headerSchemas = {
} as const;

// Header Functions
export const headers = {
} as const;

// Operation Types
// Operation Objects
// Operation Metadata
export const operationMetadata = {
} as const;
"
`;

exports[`generate Response inference infers string error responses without schemas: error-response-inference 1`] = `
"import { z } from "zod";
import type { OperationDefinition, OperationErrors } from "zenko";

// Path Functions
export const paths = {
  getErrorWithoutSchema: () => "/error",
} as const;

// Header Schemas
export const headerSchemas = {
  getErrorWithoutSchema: z.object({}),
} as const;

// Header Functions
export const headers = {
  getErrorWithoutSchema: () => headerSchemas.getErrorWithoutSchema.parse({}),
} as const;

// Generated Response Types

export const GetErrorWithoutSchemaResponse = z.object({
  message: z.string(),
});

export type GetErrorWithoutSchemaResponse = z.infer<typeof GetErrorWithoutSchemaResponse>;

// Operation Types
export type GetErrorWithoutSchemaOperation = OperationDefinition<
  "get",
  typeof paths.getErrorWithoutSchema,
  undefined,
  typeof GetErrorWithoutSchemaResponse,
  undefined,
  OperationErrors<{ internalServerError: string }>,
  undefined
>;

// Operation Objects
export const getErrorWithoutSchema: GetErrorWithoutSchemaOperation = {
  method: "get",
  path: paths.getErrorWithoutSchema,
  response: GetErrorWithoutSchemaResponse,
    errors: {
      internalServerError: string,
    },
} as const;

// Operation Metadata
export const operationMetadata = {
  getErrorWithoutSchema: {
    method: "get",
    path: "/error",
    successResponses: {"200":"GetErrorWithoutSchemaStatus200"},
    errorResponses: {"500":"string"},
    errorStatusKeys: {"500":"internalServerError"},
  },
} as const;
"
`;

exports[`generate Type helpers generates complete inline output: petstore-inline-helpers-output 1`] = `
"import { z } from "zod";
type PathFn<TArgs extends unknown[] = []> = (...args: TArgs) => string;
type RequestMethod = "get" | "put" | "post" | "delete" | "options" | "head" | "patch" | "trace";
type HeaderFn<TArgs extends unknown[] = [], TResult = Record<string, unknown> | Record<string, never>> = (...args: TArgs) => TResult;
type AnyHeaderFn = HeaderFn<any, unknown> | (() => unknown);
type OperationErrors<TError = unknown> = TError extends Record<string, unknown> ? TError : Record<string, TError>;
type SecurityRequirement = Readonly<Record<string, readonly string[]>>;
type OperationDefinition<TMethod extends RequestMethod, TPath extends (...args: any[]) => string, TRequest = undefined, TResponse = undefined, THeaders extends AnyHeaderFn | undefined = undefined, TErrors extends OperationErrors | undefined = undefined, TSecurity extends readonly SecurityRequirement[] | undefined = undefined> = {
  method: TMethod
  path: TPath
  request?: TRequest
  response?: TResponse
  headers?: THeaders
  errors?: TErrors
  security?: TSecurity
}


// Generated Zod Schemas

export const Pet = z.object({
  id: z.number().int(),
  name: z.string(),
  tag: z.string().optional(),
});

export type Pet = z.infer<typeof Pet>;

export const Pets = z.array(Pet).max(100);

export type Pets = z.infer<typeof Pets>;

export const Error = z.object({
  code: z.number().int(),
  message: z.string(),
});

export type Error = z.infer<typeof Error>;

// Path Functions
export const paths = {
  listPets: ({ limit }: { limit?: number } = {}) => {
    const params = new URLSearchParams()
    if (limit !== undefined) {
      params.set("limit", String(limit))
    }
    const _searchParams = params.toString()
    return \`/pets\${_searchParams ? \`?\${_searchParams}\` : ""}\`
  },
  createPets: () => "/pets",
  showPetById: ({ petId }: { petId: string }) => \`/pets/\${petId}\`,
} as const;

// Header Schemas
export const headerSchemas = {
  listPets: z.object({}),
  createPets: z.object({}),
  showPetById: z.object({}),
} as const;

// Header Functions
export const headers = {
  listPets: () => headerSchemas.listPets.parse({}),
  createPets: () => headerSchemas.createPets.parse({}),
  showPetById: () => headerSchemas.showPetById.parse({}),
} as const;

// Operation Types
export type ListPetsOperation = OperationDefinition<
  "get",
  typeof paths.listPets,
  undefined,
  typeof Pets,
  undefined,
  OperationErrors<{ defaultError: typeof Error }>,
  undefined
>;

export type CreatePetsOperation = OperationDefinition<
  "post",
  typeof paths.createPets,
  typeof Pet,
  undefined,
  undefined,
  OperationErrors<{ defaultError: typeof Error }>,
  undefined
>;

export type ShowPetByIdOperation = OperationDefinition<
  "get",
  typeof paths.showPetById,
  undefined,
  typeof Pet,
  undefined,
  OperationErrors<{ defaultError: typeof Error }>,
  undefined
>;

// Operation Objects
export const listPets: ListPetsOperation = {
  method: "get",
  path: paths.listPets,
  response: Pets,
    errors: {
      defaultError: Error,
    },
} as const;

export const createPets: CreatePetsOperation = {
  method: "post",
  path: paths.createPets,
  request: Pet,
    errors: {
      defaultError: Error,
    },
} as const;

export const showPetById: ShowPetByIdOperation = {
  method: "get",
  path: paths.showPetById,
  response: Pet,
    errors: {
      defaultError: Error,
    },
} as const;

// Operation Metadata
export const operationMetadata = {
  listPets: {
    method: "get",
    path: "/pets",
    successResponses: {"200":"Pets"},
    errorResponses: {"default":"Error"},
    errorStatusKeys: {"default":"defaultError"},
  },
  createPets: {
    method: "post",
    path: "/pets",
    errorResponses: {"default":"Error"},
    errorStatusKeys: {"default":"defaultError"},
  },
  showPetById: {
    method: "get",
    path: "/pets/{petId}",
    successResponses: {"200":"Pet"},
    errorResponses: {"default":"Error"},
    errorStatusKeys: {"default":"defaultError"},
  },
} as const;
"
`;
